Mudança na cor do BOTÃO e troca de imagem após ENVIAR

--- a/style.css
+++ b/style.css
@@ -71,5 +71,5 @@ button {
 
 /* Efeito ao passar o mouse sobre o botão */
 button:hover {
-    background-color: #45a049; /* Verde mais escuro */
+    background-color: #1a3b1c; /* Verde mais escuro */
 }
